[tool.poetry]
name = "delay-demo2"
version = "0.1.0"
description = ""
authors = ["Matthew Clapp <itsayellow+dev@gmail.com>"]

[tool.poetry.scripts]
delay-demo2="delay_demo2.main:cli"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
